# E-commerce-hybrid-recommendation-system

./: .coveragerc  .flake8  .gitignore  Makefile  README.md  app.py  environment.yml  frontend.py  pyproject.toml  requirements-frontend.txt  requirements.txt  setup.py  vercel.json
.github/workflows/: ci.yml
data/processed/: split_statistics.txt
data/raw/: amazon_products_sampled.csv
docker/: Dockerfile
notebooks/: EDA.ipynb
scripts/: create_sampled_data.py  evaluate_hybrid.py  hybrid_reranker.py  load_chunks_for_modeling.py  process_official_reviews.py  process_reviews_data.py  run_tests.py  test_recommender.py  train_collaborative_filtering.py  train_test_split.py
tests/: test_api_smoke.py  test_basic.py
