# pyproject.toml
[project]
name = "ecommerce-recommender"
version = "1.0.0"
description = "Hybrid recommender system for Amazon products"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.4.2",
    "pandas==2.0.3",
    "numpy==1.24.3",
    "implicit==0.7.2",
    "lightgbm==4.1.0",
    "scikit-learn==1.3.0",
    "python-multipart==0.0.6"
]